// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page renders correctly when title is not provided 1`] = `
<div>
  <div
    class="Page-pageTemplate-4"
  >
    <div
      class="Page-contentArea-5"
    >
      Page Content
    </div>
    <div>
      Footer mock
    </div>
  </div>
</div>
`;

exports[`Page renders correctly when title is provided 1`] = `
<div>
  <div
    class="Page-pageTemplate-1"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 Page-title-3 css-1yqx3hy-MuiTypography-root"
    >
      The Page Title
    </h4>
    <div
      class="Page-contentArea-2"
    >
      Page Content
    </div>
    <div>
      Footer mock
    </div>
  </div>
</div>
`;
